# pico-weathernode

./: .gitmodules  CMakeLists.txt  README.md
include/: aht20.h  bmp280.h  crc8.h  loop_packet.h  units.h
scripts/: requirements.txt  test_server.py
scripts/weewx/: install.py  weathernode_driver.py
src/: aht20.cpp  bmp280.cpp  crc8.cpp  main.cpp
